BisUtils.Generated/BisUtils.Generated.PreProcessor/PreProcParser.g4
parser grammar PreProcParser;

options { tokenVocab=PreProcLexer; }

preprocessor: text* EOF;

text: code |
    directive;

directive: 
    SHARP INCLUDE LITERAL_STRING newLineOrEOF |
    SHARP DEFINE preprocessor_macro preprocessor_expression? newLineOrEOF |
    SHARP UNDEFINE IDENTIFIER newLineOrEOF |
    ifdefDirective |
    ifndefDirective;
    
ifdefDirective: SHARP IFDEF IDENTIFIER newLineOrEOF text* (elseDirective | endIfDirective);
ifndefDirective: SHARP IFNDEF IDENTIFIER newLineOrEOF text* (elseDirective | endIfDirective);

elseDirective: SHARP ELSE newLineOrEOF text* endIfDirective;
endIfDirective: SHARP ENDIF newLineOrEOF;

preprocessor_expression: LITERAL_FLOAT                                                          #preprocessorConstant |
                         LITERAL_INT                                                            #preprocessorConstant |
                         preprocessor_macro                                                     #preprocessorMacro; 
preprocessor_macro: IDENTIFIER (LParenthesis preprocessor_expression RParenthesis)?;

newLineOrEOF: (NEW_LINE | EOF);
code: CODE+;
