BisUtils.Generated/BisUtils.Generated.PreProcessor/PreProcParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/developer/Desktop/BisUtils/BisUtils.Generated/BisUtils.Generated.PreProcessor\PreProcParser.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class PreProcParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SHARP=1, CONCAT=2, CODE=3, DIRECTIVE_WHITESPACES=4, LSBracket=5, RSBracket=6, 
		LParenthesis=7, RParenthesis=8, Comma=9, UNDEFINE=10, DEFINE=11, INCLUDE=12, 
		IF=13, IFDEF=14, IFNDEF=15, ELSE=16, ENDIF=17, LINE=18, FILE=19, IDENTIFIER=20, 
		LITERAL_STRING=21, LITERAL_INT=22, LITERAL_FLOAT=23, NEW_LINE=24, DIRECITVE_NEW_LINE=25;
	public const int
		RULE_preprocessor = 0, RULE_text = 1, RULE_directive = 2, RULE_ifdefDirective = 3, 
		RULE_ifndefDirective = 4, RULE_elseDirective = 5, RULE_endIfDirective = 6, 
		RULE_preprocessor_expression = 7, RULE_preprocessor_macro = 8, RULE_newLineOrEOF = 9, 
		RULE_code = 10;
	public static readonly string[] ruleNames = {
		"preprocessor", "text", "directive", "ifdefDirective", "ifndefDirective", 
		"elseDirective", "endIfDirective", "preprocessor_expression", "preprocessor_macro", 
		"newLineOrEOF", "code"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#'", "'##'", null, null, "'['", "']'", "'('", "')'", "','", "'undef'", 
		"'define'", "'include'", "'if'", "'ifdef'", "'ifndef'", "'else'", "'endif'", 
		"'__LINE__'", "'__FILE__'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SHARP", "CONCAT", "CODE", "DIRECTIVE_WHITESPACES", "LSBracket", 
		"RSBracket", "LParenthesis", "RParenthesis", "Comma", "UNDEFINE", "DEFINE", 
		"INCLUDE", "IF", "IFDEF", "IFNDEF", "ELSE", "ENDIF", "LINE", "FILE", "IDENTIFIER", 
		"LITERAL_STRING", "LITERAL_INT", "LITERAL_FLOAT", "NEW_LINE", "DIRECITVE_NEW_LINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PreProcParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PreProcParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PreProcParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PreProcParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PreprocessorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PreProcParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public PreprocessorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessor; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterPreprocessor(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitPreprocessor(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessor(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreprocessorContext preprocessor() {
		PreprocessorContext _localctx = new PreprocessorContext(Context, State);
		EnterRule(_localctx, 0, RULE_preprocessor);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 25;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SHARP || _la==CODE) {
				{
				{
				State = 22;
				text();
				}
				}
				State = 27;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 28;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CodeContext code() {
			return GetRuleContext<CodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DirectiveContext directive() {
			return GetRuleContext<DirectiveContext>(0);
		}
		public TextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_text; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterText(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitText(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextContext text() {
		TextContext _localctx = new TextContext(Context, State);
		EnterRule(_localctx, 2, RULE_text);
		try {
			State = 32;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CODE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 30;
				code();
				}
				break;
			case SHARP:
				EnterOuterAlt(_localctx, 2);
				{
				State = 31;
				directive();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHARP() { return GetToken(PreProcParser.SHARP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INCLUDE() { return GetToken(PreProcParser.INCLUDE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LITERAL_STRING() { return GetToken(PreProcParser.LITERAL_STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NewLineOrEOFContext newLineOrEOF() {
			return GetRuleContext<NewLineOrEOFContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINE() { return GetToken(PreProcParser.DEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Preprocessor_macroContext preprocessor_macro() {
			return GetRuleContext<Preprocessor_macroContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Preprocessor_expressionContext preprocessor_expression() {
			return GetRuleContext<Preprocessor_expressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UNDEFINE() { return GetToken(PreProcParser.UNDEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(PreProcParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IfdefDirectiveContext ifdefDirective() {
			return GetRuleContext<IfdefDirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfndefDirectiveContext ifndefDirective() {
			return GetRuleContext<IfndefDirectiveContext>(0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(Context, State);
		EnterRule(_localctx, 4, RULE_directive);
		int _la;
		try {
			State = 52;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 34;
				Match(SHARP);
				State = 35;
				Match(INCLUDE);
				State = 36;
				Match(LITERAL_STRING);
				State = 37;
				newLineOrEOF();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 38;
				Match(SHARP);
				State = 39;
				Match(DEFINE);
				State = 40;
				preprocessor_macro();
				State = 42;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENTIFIER) | (1L << LITERAL_INT) | (1L << LITERAL_FLOAT))) != 0)) {
					{
					State = 41;
					preprocessor_expression();
					}
				}

				State = 44;
				newLineOrEOF();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 46;
				Match(SHARP);
				State = 47;
				Match(UNDEFINE);
				State = 48;
				Match(IDENTIFIER);
				State = 49;
				newLineOrEOF();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 50;
				ifdefDirective();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 51;
				ifndefDirective();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfdefDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHARP() { return GetToken(PreProcParser.SHARP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IFDEF() { return GetToken(PreProcParser.IFDEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(PreProcParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NewLineOrEOFContext newLineOrEOF() {
			return GetRuleContext<NewLineOrEOFContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElseDirectiveContext elseDirective() {
			return GetRuleContext<ElseDirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndIfDirectiveContext endIfDirective() {
			return GetRuleContext<EndIfDirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public IfdefDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifdefDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterIfdefDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitIfdefDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfdefDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfdefDirectiveContext ifdefDirective() {
		IfdefDirectiveContext _localctx = new IfdefDirectiveContext(Context, State);
		EnterRule(_localctx, 6, RULE_ifdefDirective);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(SHARP);
			State = 55;
			Match(IFDEF);
			State = 56;
			Match(IDENTIFIER);
			State = 57;
			newLineOrEOF();
			State = 61;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 58;
					text();
					}
					} 
				}
				State = 63;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			State = 66;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 64;
				elseDirective();
				}
				break;
			case 2:
				{
				State = 65;
				endIfDirective();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfndefDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHARP() { return GetToken(PreProcParser.SHARP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IFNDEF() { return GetToken(PreProcParser.IFNDEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(PreProcParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NewLineOrEOFContext newLineOrEOF() {
			return GetRuleContext<NewLineOrEOFContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElseDirectiveContext elseDirective() {
			return GetRuleContext<ElseDirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndIfDirectiveContext endIfDirective() {
			return GetRuleContext<EndIfDirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public IfndefDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifndefDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterIfndefDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitIfndefDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfndefDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfndefDirectiveContext ifndefDirective() {
		IfndefDirectiveContext _localctx = new IfndefDirectiveContext(Context, State);
		EnterRule(_localctx, 8, RULE_ifndefDirective);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			Match(SHARP);
			State = 69;
			Match(IFNDEF);
			State = 70;
			Match(IDENTIFIER);
			State = 71;
			newLineOrEOF();
			State = 75;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 72;
					text();
					}
					} 
				}
				State = 77;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			State = 80;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 78;
				elseDirective();
				}
				break;
			case 2:
				{
				State = 79;
				endIfDirective();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHARP() { return GetToken(PreProcParser.SHARP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE() { return GetToken(PreProcParser.ELSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NewLineOrEOFContext newLineOrEOF() {
			return GetRuleContext<NewLineOrEOFContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndIfDirectiveContext endIfDirective() {
			return GetRuleContext<EndIfDirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public ElseDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterElseDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitElseDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseDirectiveContext elseDirective() {
		ElseDirectiveContext _localctx = new ElseDirectiveContext(Context, State);
		EnterRule(_localctx, 10, RULE_elseDirective);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			Match(SHARP);
			State = 83;
			Match(ELSE);
			State = 84;
			newLineOrEOF();
			State = 88;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 85;
					text();
					}
					} 
				}
				State = 90;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			State = 91;
			endIfDirective();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EndIfDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHARP() { return GetToken(PreProcParser.SHARP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDIF() { return GetToken(PreProcParser.ENDIF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NewLineOrEOFContext newLineOrEOF() {
			return GetRuleContext<NewLineOrEOFContext>(0);
		}
		public EndIfDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_endIfDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterEndIfDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitEndIfDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEndIfDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EndIfDirectiveContext endIfDirective() {
		EndIfDirectiveContext _localctx = new EndIfDirectiveContext(Context, State);
		EnterRule(_localctx, 12, RULE_endIfDirective);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			Match(SHARP);
			State = 94;
			Match(ENDIF);
			State = 95;
			newLineOrEOF();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Preprocessor_expressionContext : ParserRuleContext {
		public Preprocessor_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessor_expression; } }
	 
		public Preprocessor_expressionContext() { }
		public virtual void CopyFrom(Preprocessor_expressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PreprocessorMacroContext : Preprocessor_expressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public Preprocessor_macroContext preprocessor_macro() {
			return GetRuleContext<Preprocessor_macroContext>(0);
		}
		public PreprocessorMacroContext(Preprocessor_expressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterPreprocessorMacro(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitPreprocessorMacro(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorMacro(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorConstantContext : Preprocessor_expressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LITERAL_FLOAT() { return GetToken(PreProcParser.LITERAL_FLOAT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LITERAL_INT() { return GetToken(PreProcParser.LITERAL_INT, 0); }
		public PreprocessorConstantContext(Preprocessor_expressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterPreprocessorConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitPreprocessorConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorConstant(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Preprocessor_expressionContext preprocessor_expression() {
		Preprocessor_expressionContext _localctx = new Preprocessor_expressionContext(Context, State);
		EnterRule(_localctx, 14, RULE_preprocessor_expression);
		try {
			State = 100;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LITERAL_FLOAT:
				_localctx = new PreprocessorConstantContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 97;
				Match(LITERAL_FLOAT);
				}
				break;
			case LITERAL_INT:
				_localctx = new PreprocessorConstantContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 98;
				Match(LITERAL_INT);
				}
				break;
			case IDENTIFIER:
				_localctx = new PreprocessorMacroContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 99;
				preprocessor_macro();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Preprocessor_macroContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(PreProcParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LParenthesis() { return GetToken(PreProcParser.LParenthesis, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Preprocessor_expressionContext preprocessor_expression() {
			return GetRuleContext<Preprocessor_expressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RParenthesis() { return GetToken(PreProcParser.RParenthesis, 0); }
		public Preprocessor_macroContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessor_macro; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.EnterPreprocessor_macro(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreProcParserListener typedListener = listener as IPreProcParserListener;
			if (typedListener != null) typedListener.ExitPreprocessor_macro(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreProcParserVisitor<TResult> typedVisitor = visitor as IPreProcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessor_macro(this);
			else return visitor.VisitChildren(this);
		}
	}
